[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "tastytrade/__init__.py"

[project]
name = "tastytrade"
description = "An unofficial, sync/async SDK for Tastytrade!"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Graeme Holliday", email = "graeme@tastyware.dev"},
]
dependencies = [
    "httpx>=0.27.2",
    "pandas-market-calendars>=4.4.1",
    "pydantic>=2.9.2",
    "websockets>=14.1,<15",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/tastyware/tastytrade"
Documentation = "https://tastyworks-api.readthedocs.io/en/latest"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-aio>=1.5.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "pyright>=1.1.390",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
    "enum-tools[sphinx]>=0.12.0",
    "autodoc-pydantic>=2.2.0",
]

[tool.setuptools.package-data]
"tastytrade" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["tastytrade"]
